--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -104,9 +104,78 @@ body.lock {
   height: 100vh;
 }
 
+.burger {
+  display: none;
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: 30px;
+  right: 50px;
+  cursor: pointer;
+  z-index: 9999;
+
+  span {
+    margin-top: 13px;
+    display: block;
+    width: 30px;
+    height: 4px;
+    background-color: #FFFFFF;
+    border-radius: 2px;
+    transition: all .3s linear;
+  }
+
+  &::before,
+  &::after {
+    content: '';
+    display: block;
+    width: 30px;
+    height: 4px;
+    background-color: #FFFFFF;
+    border-radius: 2px;
+    position: absolute;
+    left: 0;
+    transition: all .3s linear;
+
+  }
+
+  &::before {
+    top: 4px;
+  }
+
+  &::after {
+    top: 12px;
+  }
+
+
+
+
+}
+
+.header.active {
+  .burger {
+    span {
+      opacity: 0;
+    }
+
+    &::before {
+      transform: rotate(45deg);
+      top: 10px;
+    }
+
+    &::after {
+      transform: rotate(-45deg);
+      top: 10px;
+    }
+
+  }
+}
+
 .invalid-feedback {
   color: #b90000;
   font-size: 12px;
+  position: absolute;
+  bottom: -16px;
+  left: 15px;
 }
 
 .avatar {
@@ -132,9 +201,9 @@ body.lock {
 
 .container {
   margin: 0 auto;
-  padding: 0 40px;
+  padding: 0 20px;
   width: 100%;
-  max-width: 1610px;
+  max-width: 1200px;
 }
 
 .wrapper {
@@ -169,7 +238,9 @@ body.lock {
   color: #b90000;
 }
 
-.menu {}
+.menu {
+  position: relative;
+}
 
 .menu__items {
   display: flex;
@@ -289,6 +360,7 @@ body.lock {
 }
 
 .song-item__title {
+  font-size: 20px;
   margin-bottom: 10px;
   color: var(--brown);
   transition: color 0.5s;
@@ -312,6 +384,16 @@ body.lock {
   position: relative;
   color: rgb(102, 102, 102);
   transition: color 0.5s;
+
+  p,
+  span,
+  h1,
+  h2,
+  h3,
+  h4,
+  h5 {
+    font: inherit;
+  }
 }
 
 .song-item:not(:last-child) {
@@ -333,9 +415,12 @@ body.lock {
   cursor: pointer;
   width: 40px;
   height: 40px;
-  margin-right: 30px;
   transition: fill 0.5s;
   fill: var(--orange);
+}
+
+.song-item__svg+.song-item__svg {
+  margin-left: 30px;
 }
 
 .song-item__svg:hover {
@@ -343,19 +428,79 @@ body.lock {
 }
 
 .song-item__icons {
-  top: 0;
-  right: 0;
-  position: absolute;
   display: flex;
   align-items: center;
 }
 
 .song-page {
   position: relative;
+  max-width: 900px;
+  width: 100%;
+  margin: 0 auto;
+
+  &__svg {
+    cursor: pointer;
+    width: 40px;
+    height: 40px;
+    transition: fill 0.5s;
+    fill: var(--orange);
+  }
+
+  &__inner {
+    padding: 20px 30px 30px;
+    border-radius: 20px;
+    border: 1px solid var(--light-grey);
+  }
 
   &__title {
-    margin-bottom: 15px;
+    margin-bottom: 20px;
+    text-align: center;
+    font-size: 26px;
+    color: var(--dark-grey);
   }
+
+  &__icons {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+
+  &__subtitle {
+    display: block;
+    font-size: 22px;
+    color: var(--brown);
+    font-weight: 600;
+    margin-bottom: 10px;
+  }
+
+  &__metronome {
+    text-align: right;
+    margin-bottom: 10px;
+  }
+
+  &__metronome-title {
+    font-weight: 600;
+
+    color: var(--brown);
+  }
+
+  &__item {
+    margin-bottom: 30px;
+  }
+
+  &__chords {
+    .song-page__consert-content {
+
+      p,
+      span,
+      h1,
+      h2,
+      h3 {
+        font: inherit;
+      }
+    }
+  }
+
 }
 
 .form-search {
@@ -378,9 +523,7 @@ body.lock {
 }
 
 .footer {
-  // background: linear-gradient(90deg, #7B88FF 0%, #5061FF 100%);
   background-color: var(--dark-grey);
-  /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
 }
 
 .footer__wrapper {
@@ -653,7 +796,6 @@ body.lock {
 }
 
 .user-item {
-
   border: 1px solid #b3b3b3;
   border-radius: 15px;
   padding: 15px;
@@ -680,41 +822,6 @@ body.lock {
 
   &__email {
     transition: color 0.5 linear;
-  }
-}
-
-.user-page {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-
-  &__img {
-    width: 200px;
-    margin: 0 auto 30px;
-  }
-
-  &__name {
-    text-align: center;
-    font-size: 30px;
-    margin-bottom: 20px;
-  }
-
-  &__span {
-    font-weight: 600;
-  }
-
-  &__info {
-    max-width: fit-content;
-    margin: 0 auto 30px;
-  }
-
-  &__item {
-    margin-bottom: 10px;
-  }
-
-  .btn {
-    max-width: fit-content;
-    margin: 0 auto;
   }
 }
 
@@ -749,9 +856,10 @@ body.lock {
 
   &__info-name {
     padding: 3px 5px;
+    padding-right: 10px;
     border-bottom: 1px solid var(--light-grey);
     border-right: 1px solid var(--light-grey);
-
+    font-weight: 600;
   }
 
   &__edit {
@@ -776,6 +884,31 @@ body.lock {
   width: 100%;
   margin: 0 auto;
 
+  a {
+    font-weight: 600;
+    position: relative;
+    transition: color 0.5s;
+
+    &:after {
+      content: '';
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      height: 1px;
+      background-color: #000;
+      opacity: 1;
+      transition: background-color 0.5s;
+    }
+
+    &:hover {
+      color: var(--grey);
+
+      &:after {
+        background-color: var(--grey);
+      }
+    }
+  }
 
   &__item {
     padding-bottom: 15px;
@@ -791,9 +924,11 @@ body.lock {
 
   &__input {
     border-radius: 10px;
+
+    &:focus {
+      border-radius: 10px;
+    }
   }
-
-
 
   &__registration {
     text-align: center;
@@ -812,4 +947,297 @@ body.lock {
   color: red;
 }
 
+.form-edit {
+  max-width: 800px;
+  width: 100%;
+  margin: 0 auto;
 
+  &__label {
+    position: relative;
+    display: block;
+    border-radius: 5px;
+    margin-bottom: 35px;
+  }
+
+  &__input {
+    border-radius: 10px;
+
+    &:focus {
+      border-radius: 10px;
+    }
+
+    &:valid {
+      // background-color: #ccc;
+    }
+  }
+
+  &__span {
+    font-size: 16px;
+    position: absolute;
+    top: 0;
+    left: 15px;
+    background-color: #fff;
+    padding: 0 3px;
+    transform: translateY(-50%);
+  }
+
+  &__select {
+    border: 1px solid var(--light-grey);
+    padding: 10px;
+    border-radius: 10px;
+
+    &:focus {
+      outline: 1px solid #5061FF;
+    }
+
+    &:valid {
+      // background-color: #ccc;
+    }
+  }
+
+  .avatar-form {
+    border: 1px solid var(--light-grey);
+    padding: 10px 10px 0 10px;
+    border-radius: 15px;
+    margin-bottom: 20px;
+  }
+
+  .avatar-form__group {
+    margin-bottom: 10px;
+  }
+
+  .form-control {
+    border-radius: 5px;
+    border: 1px solid var(--light-grey);
+  }
+
+  .btn+.btn {
+    margin-left: 20px;
+  }
+}
+
+.password-icon {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+
+  img {
+    width: 35px;
+    height: 35px;
+  }
+}
+
+.sunday__title {
+  text-align: center;
+  font-size: 28px;
+  color: var(--dark-grey);
+  margin-bottom: 30px;
+}
+
+@media (max-width: 1200px) {
+  .user-list {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+  }
+}
+
+
+@media (max-width: 900px) {
+  .burger {
+    display: block;
+    z-index: 999;
+  }
+
+  .user-list {
+    grid-template-columns: 1fr;
+    gap: 20px;
+  }
+
+  .menu,
+  .header__user {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    min-height: 100vh;
+    background-color: var(--light-grey);
+    transform: translateX(-200%);
+    color: #000000;
+    transition: transform 0.5s;
+    padding-left: 30px;
+  }
+
+  .menu {
+    top: 130px;
+    z-index: 9999;
+  }
+
+  .menu__items {
+    flex-direction: column;
+    align-items: flex-start;
+    max-width: 300px;
+    margin: 0 auto;
+  }
+
+  .nav-profile {
+    justify-content: center;
+    align-items: center;
+  }
+
+  .nav-profile__user {
+    font-size: 26px;
+  }
+
+  .nav-profile__img {
+    width: 70px;
+    height: 70px;
+  }
+
+  .menu__item {
+    color: #000000;
+    margin-right: 0;
+    margin-bottom: 15px;
+    font-size: 20px;
+  }
+
+  .header__user {
+    top: 0;
+    padding-top: 30px;
+
+  }
+
+  .header.active .menu,
+  .header.active .header__user {
+    transform: translateX(0);
+  }
+
+  .header.active .burger::after,
+  .header.active .burger::before {
+    background-color: #000;
+  }
+
+  .avatar-form__content {
+    font-size: 14px;
+  }
+
+  .avatar-form__group {
+    grid-template-columns: 100px 1fr;
+  }
+
+}
+
+
+
+@media (max-width: 660px) {
+  // .main {
+  //   padding-top: 100px;
+  // }
+
+  body {
+    font-size: 14px;
+  }
+
+  .avatar-form {
+    flex-direction: column;
+  }
+
+  .avatar {
+    width: 150px;
+    height: 150px;
+    margin-bottom: 20px;
+    margin-top: 10px;
+  }
+
+  .song-item {
+    padding: 10px;
+  }
+
+  .song-item__title {
+    font-size: 18px;
+  }
+
+  .song-item__text {
+    font-size: 14px;
+  }
+
+  .song-item__svg {
+    width: 25px;
+    height: 25px;
+  }
+
+  .song-item__svg+.song-item__svg {
+    margin-left: 15px;
+  }
+
+  .song-item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+
+  .form-search,
+  .song-list__btn {
+    margin-bottom: 15px;
+    font-size: 14px;
+  }
+
+  .form-edit__label {
+    margin-bottom: 25px;
+  }
+
+  .input {
+    // padding: 5px 10px;
+    font-size: 14px;
+  }
+
+  .form-edit__select {
+    font-size: 14px;
+  }
+
+  .password-icon img {
+    width: 25px;
+    height: 25px;
+  }
+
+  .form-edit__span {
+    font-size: 12px;
+  }
+
+  .song-page {
+    iframe {
+      width: 320px;
+      height: 200px;
+    }
+  }
+
+  .song-page__inner {
+    padding: 15px;
+  }
+
+}
+
+@media (max-width: 420px) {
+  .account-page__btns {
+    display: flex;
+    flex-direction: column;
+    // align-items: center;
+  }
+
+  .account-page__edit {
+    margin-right: 0;
+    margin-bottom: 20px;
+    margin-top: 10px;
+  }
+
+  .form-edit .btn+.btn {
+    margin-left: 0;
+  }
+
+  .song-page {
+    iframe {
+      width: 280px;
+      height: 200px;
+    }
+  }
+
+
+
+}
