--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,7 +1,5 @@
 :root {
   --orange: rgb(250, 143, 1);
-  ;
-  // --orange: #F1A94F;
   --dark-orange: rgb(223, 126, 0);
   --brown: #800000;
 
@@ -145,10 +143,6 @@ body.lock {
   &::after {
     top: 12px;
   }
-
-
-
-
 }
 
 .header.active {
@@ -219,6 +213,22 @@ body.lock {
   position: relative;
 }
 
+.home {
+  h2 {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  p {
+    max-width: 900px;
+    margin: 0 auto 15px;
+  }
+
+  span {
+    display: block;
+  }
+}
+
 .link {
   transition: color 0.5s;
 }
@@ -272,7 +282,6 @@ body.lock {
 .btn {
   padding: 5px 20px;
   color: #fff;
-  // font-weight: 600;
   border: 2px solid transparent;
   background-color: var(--orange);
   border-radius: 10px;
@@ -280,8 +289,6 @@ body.lock {
 }
 
 .btn:hover {
-  // border: 2px solid #464455;
-  // color: var(--white);
   background-color: var(--dark-orange);
 }
 
@@ -845,7 +852,6 @@ body.lock {
   &__info {
     display: grid;
     grid-template-columns: max-content 1fr;
-    // row-gap: 10px;
     margin-bottom: 30px;
   }
 
@@ -865,7 +871,6 @@ body.lock {
   &__edit {
     margin-right: 15px;
   }
-
 }
 
 .login {
@@ -965,10 +970,6 @@ body.lock {
     &:focus {
       border-radius: 10px;
     }
-
-    &:valid {
-      // background-color: #ccc;
-    }
   }
 
   &__span {
@@ -988,10 +989,6 @@ body.lock {
 
     &:focus {
       outline: 1px solid #5061FF;
-    }
-
-    &:valid {
-      // background-color: #ccc;
     }
   }
 
@@ -1129,9 +1126,6 @@ body.lock {
 
 
 @media (max-width: 660px) {
-  // .main {
-  //   padding-top: 100px;
-  // }
 
   body {
     font-size: 14px;
@@ -1184,7 +1178,6 @@ body.lock {
   }
 
   .input {
-    // padding: 5px 10px;
     font-size: 14px;
   }
 
@@ -1218,7 +1211,6 @@ body.lock {
   .account-page__btns {
     display: flex;
     flex-direction: column;
-    // align-items: center;
   }
 
   .account-page__edit {
